--- a/public/resume.html
+++ b/public/resume.html
@@ -36,9 +36,10 @@
                         Educational Attainment
                     </h6>
                     <ul>
-                        <li>Bachelor of Science in Computer Science 2016
+                        <li>Bachelor of Science in Computer Science<br/>
+                            <span class="fst-italic">June 2012 - March 2016</span>
                             <ul>
-                                <li>Xavier University - Ateneo de Cagayan Corrales Ave. Cagayan de Oro City</li>
+                                <li>Xavier University - Ateneo de Cagayan <br/> Corrales Ave. Cagayan de Oro City</li>
                             </ul>
                             
                         </li>
@@ -56,43 +57,56 @@
                         <li>Organizing and conducting seminars, trainings and workshops.</li>
                         <li>Troubleshooting Computers</li>
                     </ul>
-                    <h6><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-window me-2" viewBox="0 0 16 16">
-                        <path d="M2.5 4a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1m2-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0m1 .5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/>
-                        <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm13 2v2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1M2 14a1 1 0 0 1-1-1V6h14v7a1 1 0 0 1-1 1z"/>
-                      </svg>Programs and Technologies Used</h6>
+                    <h6><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="me-2 bi bi-tools" viewBox="0 0 16 16">
+                        <path d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z"/>
+                      </svg>Tools and Technologies Used</h6>
                     <ul>
+                        <li>Programing Languages
+                            <ul>
+                             <li>HTML</li>
+                             <li>CSS</li>
+                             <li>SASS</li>
+                             <li>Javascript</li>
+                             <li>Python</li>
+                             <li>Auto Hothotkeys</li>
+                            </ul>
+                        </li>
                         <li>Adobe Photoshop</li>
                         <li>Adobe Indesign</li>
                         <li>Adobe Illustrator</li>
                         <li>Blender</li>
-                        <li>Auto Hotkeys</li>
-                        <li>Web Dev - html, css, sass</li>
                     </ul>
                     <hr />
                     <h6>Related Experience</h6>
                     <ul>
-                        <li>Visual Display Officer at Shopping Center Management Corporation
+                        <li>Graphic Designer and Website Manager at <br>
+                            Xaver University Communications Department <br/>
+                            <span class="fst-italic"> May 2016 - March 2017</span>
                             <ul>
-                                <li>Inclusive Dates
-                                    <ul>
-                                        <li>2019 - 2021</li>
-                                    </ul>
-                                </li>
                                 <li>Responsibilities:
                                     <ul>
-                                        <li>Maintain the given standard in the company properties' aesthetic appeal.</li>
-                                        <li>Propose, budget, and supervise implementation of Installations.</li>
+                                        <li>Design Communications Paraphernalia such as Flyers, Banners, Ads, Brochures, Website Graphics, etc.</li>
+                                        <li>Update and Manage the University's Website Content</li>
+                                        <li>Copy Editing and Disseminating Information to appropriate channels</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>Visual Display Officer at Shopping Center Management Corporation <br/>
+                            <span class="fst-italic">April 2017 - April 2019</span>
+                            <ul>
+                                <li>Responsibilities:
+                                    <ul>
+                                        <li>Supervise the maintainance of the given standard in the company properties' aesthetic appeal.</li>
+                                        <li>Propose, budget, and supervise implementation of decorative seasonal installations.</li>
                                         <li>Planning and allocation of approximately 2.2M yearly budget</li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
-                        <li>Freelance Illustrator | Graphic Designer | Developer
+                        <li>Freelance Illustrator | Graphic Designer | Developer <br/>
+                            <span class="fst-italic">April 2019 - PRESENT</span>
                             <ul>
-                                <li>inclusive Dates
-                                    <ul>
-                                        <li>2021 - PRESENT</li>
-                                    </ul>
                                 </li>
                                 <li>Clients
                                     <ul>
