--- a/public/resume.html
+++ b/public/resume.html
@@ -85,7 +85,7 @@
                             <ul>
                                 <li>Responsibilities:
                                     <ul>
-                                        <li>Design Communications Paraphernalia such as Flyers, Banners, Ads, Brochures, Website Graphics, etc.</li>
+                                        <li>Design Communications Paraphernalia such as Fliers, Banners, Ads, Brochures, Website Graphics, etc.</li>
                                         <li>Update and Manage the University's Website Content</li>
                                         <li>Copy Editing and Disseminating Information to appropriate channels</li>
                                     </ul>
@@ -97,7 +97,7 @@
                             <ul>
                                 <li>Responsibilities:
                                     <ul>
-                                        <li>Supervise the maintainance of the given standard in the company properties' aesthetic appeal.</li>
+                                        <li>Supervise the maintenance of the given standard in the company properties' aesthetic appeal.</li>
                                         <li>Propose, budget, and supervise implementation of decorative seasonal installations.</li>
                                         <li>Planning and allocation of approximately 2.2M yearly budget</li>
                                     </ul>
